Fix star alignment & adding flex property

--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -18,6 +18,15 @@
 	font-size: 150%;
 }
 
+.subsecHeading{
+	padding-left: 2rem;
+	text-align:left;
+	color:#96fa00;
+    font-family: 'Poppins', sans-serif;
+	font-size: 150%;
+
+}
+
 section.border_element{
   padding-top: 2rem;
 
@@ -261,22 +270,33 @@ input[type=text]:focus{
 
 form{
 	display:flex;
-	width:100%;
+	width:90%;
 }
 
-/*. star rating code start here */
+/*. --------------------star rating code start here------------------------ */
 
 .center .stars{
-  height: 150px;
-  width: 500px;
+  height: 50px;
+  width: 50px;
   text-align: center;
+ 
+}
+
+.stars{
+
+	width:30%;
+	display:flex;
+	flex-direction:row-reverse;
+	justify-content: space-around;
+
+
 }
 .stars input{
   display: none;
 }
 .stars label{
-  float: right;
-  font-size: 100px;
+  float: left;
+  font-size: 30px;
   color: lightgrey;
   margin: 0 5px;
   text-shadow: 1px 1px #bbb;
@@ -310,26 +330,9 @@ form{
   font-family: 'Poppins', sans-serif;
   display: none;
 }
-.stars input:checked ~ .result:before{
-  display: block;
-}
-.stars #five:checked ~ .result:before{
-  content: "I love it 😍";
-}
-.stars #four:checked ~ .result:before{
-  content: "I like it 😎";
-}
-.stars #three:checked ~ .result:before{
-  content: "It's good 😄";
-}
-.stars #two:checked ~ .result:before{
-  content: "I don't like it 😒";
-}
-.stars #one:checked ~ .result:before{
-  content: "I hate it 😠";
-}
 
-/* star rating code end here.*/
+
+/* -----------------------star rating code end here.-------------------------*/
 
 
 
